3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/skills.c: Fix jump so that it updates the clients map properly.
server/spell_effect.c: insert town portals below the player so it
   works better with apply.
MSW 2003-02-20

server/move.c: Fix transfer_ob so that it sends newmap command to client
   if we're moving a playing - otherwise fog of war displays bad
   information on the client.
MSW 2003-02-19

More bugfixes:
server/c_wiz.c: Fix reset command - while it deleted the maps, it made things
   so that it never got removed from the map listing - instead, just let
   flush_old_maps do most of the work.
server/main.c: If player tries to enter a random map that has been reset
   and that we have no informatino about (eg, going up in a dungeon),
   just say the exit is closed instead of making a completely random map 
   that usually isn't in keeping with the dungeon (and still won't lead
   outdoors)
server/move.c: In move_teleporter(), change it so that if a player uses
   a shop map yet there is no place to put the player, just drop him on
   top of a monster - this fixes problem of players getting trapped inside
   of shops in random dungeons.
MSW 2003-02-16

random_map/random_map.c: Include parameters used to make map in msg of map -
   this can hopefully be used to debug what is really happening when bad
   maps are made.
server/rune.c: Modify dispel_rune function (called from disarm spell)
   to erase marking runes.  While at it, fix it so that it does the right
   thing with respect to tiled maps.
MSW 2003-02-15

include/sproto.h, server/move.c:  Modify try_fit() to take mapstruct parameter