@@ -5121,3 +5121,21 @@ treasure skeletalmage
   arch ability_frostbolt
     chance 67
 end
+#
+treasureone sheep
+  arch sheepskin
+    chance 5
+  more
+  arch liver
+    chance 5
+  more
+  arch heart
+    chance 5
+  more
+  arch haggis
+    chance 2
+  more
+  arch leg_mutton
+    chance 15
+  end
+#
